--- a/themes/pure/layouts/partials/head.html
+++ b/themes/pure/layouts/partials/head.html
@@ -75,3 +75,4 @@
         <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
       <![endif]-->` | safeHTML }}
+<meta name="wlhlauth" content="96da17219d9fe9c7370a9bb647eb4743"/>
